[gd_scene load_steps=5 format=3 uid="uid://cgeo8n0mg0x68"]

[ext_resource type="Script" path="res://Battle/player/player_stats_ui.gd" id="1_t78et"]
[ext_resource type="Texture2D" uid="uid://djmrox3cqnntc" path="res://icon.svg" id="1_v03cj"]
[ext_resource type="PackedScene" uid="uid://cm2iaddemayb2" path="res://Battle/health_bar.tscn" id="3_rf0j1"]
[ext_resource type="PackedScene" uid="uid://20lggu6h8kmx" path="res://Items/equipment/equipment_ui.tscn" id="4_jt7va"]

[node name="PlayerStatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t78et")

[node name="PlayerIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 128.0
grow_vertical = 0
texture = ExtResource("1_v03cj")

[node name="PlayerStatsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = -128.0
offset_right = 256.0
offset_bottom = -8.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" parent="PlayerStatsPanel/VBoxContainer" instance=ExtResource("3_rf0j1")]
unique_name_in_owner = true
layout_mode = 2

[node name="ShieldLabel" type="Label" parent="PlayerStatsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3 Energy"
horizontal_alignment = 1

[node name="ArmorLabel" type="Label" parent="PlayerStatsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3 Energy"
horizontal_alignment = 1

[node name="DodgesLabel" type="Label" parent="PlayerStatsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3 Dodges"
horizontal_alignment = 1

[node name="EquipmentUI" parent="." instance=ExtResource("4_jt7va")]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 16.0
offset_top = -152.0
offset_right = 34.0
offset_bottom = -134.0
grow_horizontal = 1
grow_vertical = 0
